add_library(get_me_test_lib STATIC)
target_sources(get_me_test_lib PRIVATE main.cpp get_me_tests.cpp)
target_link_libraries(get_me_test_lib PUBLIC get_me_lib get_me_support)
target_link_libraries(get_me_test_lib PUBLIC Catch2::Catch2WithMain)
target_include_directories(get_me_test_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

function(add_get_me_test name)
  add_executable(test_${name})
  target_sources(test_${name} PRIVATE ${name}.cpp)
  target_link_libraries(test_${name} PRIVATE get_me_test_lib)
  add_test(NAME ${name} COMMAND test_${name})
  add_dependencies(check test_${name})
  set_tests_properties(
    ${name} PROPERTIES ENVIRONMENT "LLVM_PROFILE_FILE=profile_${name}.profraw")
endfunction()

add_get_me_test(basic)
add_get_me_test(type_aliasing)
add_get_me_test(inheritance)
add_get_me_test(generated_straight_path)
add_get_me_test(generated_forking_path)
add_get_me_test(generated_multi_forking_path)
add_get_me_test(type_conversions)
